# JNIBridge

./: LICENSE  README.md  TODO.txt  build.gradle.kts  settings.gradle.kts
examples/: CMakeLists.txt  CMakePresets.json  build.gradle.kts
examples/native/oop/: AnotherClass.cpp  BaseClass.cpp  Diamond.cpp  PolymorphicStructure.cpp
examples/native/simple/: SimpleStatics.cpp
examples/src/main/java/com/jnibridge/examples/mappings/: ConfigMetadata.java  MapJNI.java
examples/src/main/java/com/jnibridge/examples/mappings/diamond/: Animal.java  Bat.java  Bird.java  Mammal.java
examples/src/main/java/com/jnibridge/examples/mappings/oop/: A.java  AnotherClass.java  B.java  BaseClass.java  Color.java
examples/src/main/java/com/jnibridge/examples/mappings/simple/: SimpleStaticMappings.java
examples/src/main/resources/: someJNICode.mapping
examples/src/test/java/com/jnibridge/example/mappings/diamond/: BatTest.java
examples/src/test/java/com/jnibridge/example/mappings/oop/: BaseClassTest.java
examples/src/test/java/com/jnibridge/example/mappings/simple/: SimpleStaticMappingsTest.java
src/main/java/com/jnibridge/: JNIBridge.java  JniBridgeRegistry.java
src/main/java/com/jnibridge/annotations/: BridgeClass.java  BridgeMetaData.java  BridgeMetadata.java  IgnoreJniBridge.java  IgnoreJniBridgePolymorphism.java  InheritableMetadata.java  JNIMapped.java  JniBridgeIgnore.java  Mapping.java  Name.java  Namespace.java  TypeMapping.java  Typemapping.java  UseMapping.java
src/main/java/com/jnibridge/exception/: JniBridgeException.java
(+161 files in other folders)
